// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkAccordion should render correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-accordion"
  >
    Accordion child
  </div>
</DocumentFragment>
`;

exports[`BpkAccordion should render correctly with custom "className" prop 1`] = `
<DocumentFragment>
  <div
    class="bpk-accordion my-custom-class"
  >
    Accordion child
  </div>
</DocumentFragment>
`;
